--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,13 +21,13 @@ jobs:
         cache: maven
 
     - name: Build with Maven
-      run: mvn clean compile
+      run: mvn clean install --batch-mode --quiet 
 
     - name: Run tests
-      run: mvn test
+      run: mvn test --batch-mode --quiet
 
     - name: Package application
-      run: mvn package
+      run: mvn package --batch-mode --quiet
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
